# hello-wasm

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
src/: lib.rs
static/: index.js
